force-app/main/default/objects/ProductReferential__c/fields/SPO_ImageLink4InteriorView__c.field-meta.xml
<CustomField>
    <fullName>SPO_ImageLink4InteriorView__c</fullName>
    <formula>$Setup.ProductSettings__c.BccLargePictureUrl__c + &apos;louis-vuitton--&apos; + SKUCode__c + &apos;_PM1_Interior%20view.jpg&apos; 
/*&apos;http://fr.louisvuitton.com/images/is/image/lv/1/PP_VP_L/louis%20vuitton--&apos; +  SKUCode__c + &apos;_PM1_&apos; + &apos;Interior%20view&apos; + &apos;.jpg&apos;
&apos;http://fr.louisvuitton.com/images/is/image/lv/1/PP_VP_L/louis%20vuitton--&apos; +  SKUCode__c + &apos;_PM2_&apos; + &apos;Interior%20view&apos; + &apos;.jpg&apos;*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Link 4 Interior View</label>
    <type>Text</type>
</CustomField>