force-app/main/default/objects/ProductReferential__c/fields/SPO_LiningMaterial1__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningMaterial1__c</fullName>
    <label>Lining Material</label>
    <type>TextArea</type>
</CustomField>