force-app/main/default/objects/ProductReferential__c/fields/SPO_ProductNameSKU__c.field-meta.xml
<CustomField>
    <fullName>SPO_ProductNameSKU__c</fullName>
    <formula>SKUCode__c +&quot; - &quot;+ Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product of reference</label>
    <type>Text</type>
</CustomField>