force-app/main/default/objects/ProductReferential__c/fields/SPO_StrapMaterialSAP__c.field-meta.xml
<CustomField>
    <fullName>SPO_StrapMaterialSAP__c</fullName>
    <label>Strap Material (SAP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAMIER GEANT</fullName>
            </value>
            <value>
                <fullName>EPI</fullName>
            </value>
            <value>
                <fullName>LIZARD</fullName>
            </value>
            <value>
                <fullName>MAT ALLIGATOR</fullName>
            </value>
            <value>
                <fullName>MINK</fullName>
            </value>
            <value>
                <fullName>MONOGRAM DOUCEUR</fullName>
            </value>
            <value>
                <fullName>MONOGRAM MULTICOLORE</fullName>
            </value>
            <value>
                <fullName>MONOGRAM VERNIS</fullName>
            </value>
            <value>
                <fullName>NA-NOT APPLICABLE</fullName>
            </value>
            <value>
                <fullName>OSTRICH</fullName>
            </value>
            <value>
                <fullName>SHINY ALLIGATOR</fullName>
            </value>
            <value>
                <fullName>STEEL</fullName>
            </value>
            <value>
                <fullName>STEEL &amp; GOLD</fullName>
            </value>
            <value>
                <fullName>STINGRAY</fullName>
            </value>
            <value>
                <fullName>SUHALI</fullName>
            </value>
            <value>
                <fullName>TAIGA</fullName>
            </value>
            <value>
                <fullName>VVN</fullName>
            </value>
            <value>
                <fullName>VVT</fullName>
            </value>
            <value>
                <fullName>WATERSNAKE</fullName>
            </value>
            <value>
                <fullName>DAMIER GRAPHITE</fullName>
            </value>
            <value>
                <fullName>DAMIER AZUR</fullName>
            </value>
            <value>
                <fullName>MONOGRAM</fullName>
            </value>
            <value>
                <fullName>CALF</fullName>
            </value>
            <value>
                <fullName>DOGFISH</fullName>
            </value>
            <value>
                <fullName>STEEL &amp; RUBBER</fullName>
            </value>
            <value>
                <fullName>RUBBER</fullName>
            </value>
            <value>
                <fullName>BUFFALO</fullName>
            </value>
            <value>
                <fullName>FIBER</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>DENIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>