force-app/main/default/objects/ProductReferential__c/fields/StoreOrganization__c.field-meta.xml
<CustomField>
    <fullName>StoreOrganization__c</fullName>
    <label>Store Organization</label>
    <length>30</length>
    <type>Text</type>
</CustomField>