force-app/main/default/objects/ProductReferential__c/fields/SubFamily__c.field-meta.xml
<CustomField>
    <fullName>SubFamily__c</fullName>
    <label>Sub Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>