force-app/main/default/objects/ProductReferential__c/fields/SubGroup__c.field-meta.xml
<CustomField>
    <fullName>SubGroup__c</fullName>
    <label>Sub Group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>