force-app/main/default/objects/ProductReferential__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <length>30</length>
    <type>Text</type>
</CustomField>