force-app/main/default/objects/ProductReferential__c/fields/TransvAnimation__c.field-meta.xml
<CustomField>
    <fullName>TransvAnimation__c</fullName>
    <label>Transv Animation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>