force-app/main/default/objects/ProductReferential__c/fields/Universe__c.field-meta.xml
<CustomField>
    <fullName>Universe__c</fullName>
    <label>Universe</label>
    <length>30</length>
    <type>Text</type>
</CustomField>