force-app/main/default/objects/ProductReferential__c/fields/WatchBoucleType__c.field-meta.xml
<CustomField>
    <fullName>WatchBoucleType__c</fullName>
    <label>Watch Boucle type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>