force-app/main/default/objects/ProductReferential__c/fields/WatchBoxfinition__c.field-meta.xml
<CustomField>
    <fullName>WatchBoxfinition__c</fullName>
    <label>Watch box finition</label>
    <length>30</length>
    <type>Text</type>
</CustomField>