force-app/main/default/objects/ProductReferential__c/fields/WatchBoxMaterial__c.field-meta.xml
<CustomField>
    <fullName>WatchBoxMaterial__c</fullName>
    <label>Watch case material</label>
    <length>30</length>
    <type>Text</type>
</CustomField>