force-app/main/default/objects/ProductReferential__c/fields/WatchBoxsetting__c.field-meta.xml
<CustomField>
    <fullName>WatchBoxsetting__c</fullName>
    <label>Watch Box setting</label>
    <length>30</length>
    <type>Text</type>
</CustomField>