force-app/main/default/objects/ProductReferential__c/fields/WatchBoxwidth__c.field-meta.xml
<CustomField>
    <fullName>WatchBoxwidth__c</fullName>
    <label>Watch case width</label>
    <length>30</length>
    <type>Text</type>
</CustomField>