force-app/main/default/objects/ProductReferential__c/fields/WatchBraceletmaterial__c.field-meta.xml
<CustomField>
    <fullName>WatchBraceletmaterial__c</fullName>
    <label>Watch Bracelet material</label>
    <length>30</length>
    <type>Text</type>
</CustomField>