force-app/main/default/objects/ProductReferential__c/fields/WatchBuckelsku__c.field-meta.xml
<CustomField>
    <fullName>WatchBuckelsku__c</fullName>
    <label>Watch Buckel sku</label>
    <length>30</length>
    <type>Text</type>
</CustomField>