force-app/main/default/objects/ProductReferential__c/fields/WatchBucklematerial__c.field-meta.xml
<CustomField>
    <fullName>WatchBucklematerial__c</fullName>
    <label>Watch Buckle material</label>
    <length>30</length>
    <type>Text</type>
</CustomField>