force-app/main/default/objects/ProductReferential__c/fields/WatchCadrancouleur__c.field-meta.xml
<CustomField>
    <fullName>WatchCadrancouleur__c</fullName>
    <label>Watch Cadran couleur</label>
    <length>30</length>
    <type>Text</type>
</CustomField>