force-app/main/default/objects/ProductReferential__c/fields/WatchDialcompo__c.field-meta.xml
<CustomField>
    <fullName>WatchDialcompo__c</fullName>
    <label>Watch Dial compo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>