force-app/main/default/objects/ProductReferential__c/fields/WatchFamily__c.field-meta.xml
<CustomField>
    <fullName>WatchFamily__c</fullName>
    <label>Watch Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>