force-app/main/default/objects/ProductReferential__c/fields/WatchLimitedbox__c.field-meta.xml
<CustomField>
    <fullName>WatchLimitedbox__c</fullName>
    <label>Watch Limited box</label>
    <length>30</length>
    <type>Text</type>
</CustomField>