force-app/main/default/objects/ProductReferential__c/fields/WatchLine__c.field-meta.xml
<CustomField>
    <fullName>WatchLine__c</fullName>
    <label>Watch Line</label>
    <length>30</length>
    <type>Text</type>
</CustomField>