force-app/main/default/objects/ProductReferential__c/fields/WatchMovementname__c.field-meta.xml
<CustomField>
    <fullName>WatchMovementname__c</fullName>
    <label>Watch Movement name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>