force-app/main/default/objects/ProductReferential__c/fields/WatchMovementtype__c.field-meta.xml
<CustomField>
    <fullName>WatchMovementtype__c</fullName>
    <label>Watch Movement type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>