force-app/main/default/objects/ProductReferential__c/fields/WatchSimplebox__c.field-meta.xml
<CustomField>
    <fullName>WatchSimplebox__c</fullName>
    <label>Watch Simple box</label>
    <length>30</length>
    <type>Text</type>
</CustomField>