force-app/main/default/objects/ProductReferential__c/fields/WatchStones__c.field-meta.xml
<CustomField>
    <fullName>WatchStones__c</fullName>
    <label>Watch Stones</label>
    <length>30</length>
    <type>Text</type>
</CustomField>