force-app/main/default/objects/ProductReferential__c/fields/WatchStrapcolor__c.field-meta.xml
<CustomField>
    <fullName>WatchStrapcolor__c</fullName>
    <label>Watch Strap Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>