force-app/main/default/objects/ProductReferential__c/fields/WatchStrapShape__c.field-meta.xml
<CustomField>
    <fullName>WatchStrapShape__c</fullName>
    <label>Watch Strap shape</label>
    <length>30</length>
    <type>Text</type>
</CustomField>