force-app/main/default/objects/ProductReferential__c/fields/WatchStrapsize__c.field-meta.xml
<CustomField>
    <fullName>WatchStrapsize__c</fullName>
    <label>Watch Strap size</label>
    <length>30</length>
    <type>Text</type>
</CustomField>