force-app/main/default/objects/ProductReferential__c/fields/WatchStrapsku__c.field-meta.xml
<CustomField>
    <fullName>WatchStrapsku__c</fullName>
    <label>Watch Strap sku</label>
    <length>30</length>
    <type>Text</type>
</CustomField>