force-app/main/default/objects/ProductReferential__c/fields/WatchStrapsubmaterial__c.field-meta.xml
<CustomField>
    <fullName>WatchStrapsubmaterial__c</fullName>
    <label>Watch Strap sub material</label>
    <length>30</length>
    <type>Text</type>
</CustomField>