force-app/main/default/objects/ProductReferential__c/fields/WatchSubtheme__c.field-meta.xml
<CustomField>
    <fullName>WatchSubtheme__c</fullName>
    <label>Watch Sub theme</label>
    <length>30</length>
    <type>Text</type>
</CustomField>