force-app/main/default/objects/ProductReferential__c/fields/Witdth__c.field-meta.xml
<CustomField>
    <fullName>Witdth__c</fullName>
    <label>Witdth (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>