force-app/main/default/objects/ProductReferential__c/validationRules/Do_Not_Edit_Product_Referential_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Edit_Product_Referential_field</fullName>
    <active>true</active>
    <description>Prevents non admin users from editing &quot;Product Name&quot; and &quot;base SKU code&quot; fields</description>
    <errorConditionFormula>AND(
    $Profile.Name   &lt;&gt; &quot;System Administrator&quot;, 
    $Profile.Name   &lt;&gt; &quot;LV_Interface_Datastage&quot;, 
    OR( 
       ISCHANGED(Name), 
       ISCHANGED(SKUCode__c)
    )
)</errorConditionFormula>
    <errorMessage>You cannot edit neither &quot;Product Name&quot; nor &quot;Base SKU code&quot; fields</errorMessage>
</ValidationRule>